# Kung_Fu_Chess

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
config/: GameConfig.cpp  GameConfig.hpp
engine/: GameEngine.cpp  GameEngine.hpp  PieceEngine.cpp  PieceEngine.hpp  RuleEngine.cpp  RuleEngine.hpp
input/: GameController.cpp  GameController.hpp
io/: BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp
model/: Board.hpp  Piece.hpp  Position.hpp
realtime/: Jump.cpp  Jump.hpp  Motion.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
rules/: IMoveRule.hpp  RuleBishop.hpp  RuleKing.cpp  RuleKing.hpp  RuleKnight.cpp  RuleKnight.hpp  RulePawn.cpp  RulePawn.hpp  RuleQueen.hpp  RuleRook.hpp  RuleUtils.cpp  RuleUtils.hpp
src/application/: Application.cpp  Application.hpp
src/common/: MoveResult.hpp  PieceTypes.hpp
src/graphics/: Img.cpp  Img.hpp
src/gui/animation/: AnimationPlayer.cpp  AnimationPlayer.hpp
src/gui/config/: GuiConfig.cpp  GuiConfig.hpp  Layout.cpp  Layout.hpp
src/gui/graphics/: Img.cpp  Img.hpp
src/gui/input/: MouseInput.cpp  MouseInput.hpp
src/gui/loop/: GameLoop.cpp  GameLoop.hpp
src/gui/rendering/: BoardRenderer.cpp  BoardRenderer.hpp  GameRenderer.cpp  GameRenderer.hpp  PieceRenderer.cpp  PieceRenderer.hpp  SelectionRenderer.cpp  SelectionRenderer.hpp
src/gui/resources/: Animation.cpp  Animation.hpp  Sprite.cpp  Sprite.hpp  SpriteKey.cpp  SpriteKey.hpp  TextureManager.cpp  TextureManager.hpp
src/gui/snapshot/: GameSnapshot.cpp  GameSnapshot.hpp  PieceSnapshot.cpp  PieceSnapshot.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp
src/gui/window/: ImgWindow.cpp  ImgWindow.hpp  Window.cpp  Window.hpp
src/logic/config/: GameConfig.cpp  GameConfig.hpp
src/logic/engine/: GameEngine.cpp  GameEngine.hpp  GameOverHandler.cpp  GameOverHandler.hpp  JumpManager.cpp  JumpManager.hpp  MotionManager.cpp  MotionManager.hpp  MoveExecutor.cpp  MoveExecutor.hpp  PieceEngine.hpp  PromotionHandler.cpp  PromotionHandler.hpp  RestManager.cpp  RestManager.hpp  RuleEngine.cpp  RuleEngine.hpp
src/logic/input/: BoardMapper.hpp  GameController.cpp  GameController.hpp
src/logic/io/: BoardParser.cpp
src/logic/model/: Board.cpp  Board.hpp  Piece.hpp
src/logic/realtime/: Motion.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp  Rest.cpp  Rest.hpp
src/logic/rules/: RuleBishop.cpp  RuleQueen.cpp  RuleRook.cpp
src/logic/setup/: BoardInitializer.cpp  BoardInitializer.hpp
src/logic/snapshot/: GameSnapshot.cpp  GameSnapshot.hpp  GameSnapshotBuilder.cpp  GameSnapshotBuilder.hpp  PieceSnapshot.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp
src/logic/texttests/: ScriptRunner.hpp
src/server/: Server.cpp  Server.hpp
src/server/Logging/: AsyncLogger.cpp  AsyncLogger.hpp  LogFormatter.cpp  LogFormatter.hpp  LogLevel.hpp  LogMessage.hpp
src/server/commands/: ClickCommand.cpp  CommandHandler.cpp  CommandHandler.hpp
src/server/connection/: ClientConnection.cpp  ClientConnection.hpp  ConnectionManager.cpp  ConnectionManager.hpp
src/server/core/: GameSession.cpp  GameSession.hpp  PlayerSession.cpp
src/server/core/commands/: ClickCommand.hpp  CommandHandler.cpp  CommandHandler.hpp  CommandParser.cpp  CommandParser.hpp
src/server/infrastructure/config/: Config.cpp  Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  serverConfig.hpp
src/server/infrastructure/events/: Event.hpp  EventBus.cpp  EventBus.hpp  GameStateChangedEvent.cpp  GameStateChangedEvent.hpp
src/server/infrastructure/taskScheduler/: TaskScheduler.cpp  TaskScheduler.hpp
src/server/network/: ConnectionHandler.cpp  ConnectionHandler.hpp  INetworkServer.hpp  LocalNetworkServer.cpp  LocalNetworkServer.hpp  NetworkMessage.cpp  NetworkMessage.hpp  SnapshotSerializer.cpp  SnapshotSerializer.hpp  WebSocketServer.cpp  WebSocketServer.hpp
src/server/protocol/: ClickPacket.cpp  ClickPacket.hpp  ClientPacket.hpp  Packet.hpp  PacketType.hpp  ProtocolParser.cpp  ProtocolParser.hpp  ProtocolVersion.cpp  ProtocolVersion.hpp  ServerPacket.hpp
src/server/sessions/: GameSession.cpp  GameSession.hpp  PlayerSession.hpp  SessionManager.cpp  SessionManager.hpp
src/server/transport/: IClientTransport.hpp  LocalClientTransport.cpp  LocalClientTransport.hpp
test/: mainTest.cpp
test/unit/infrastructure/config/: ConfigLoaderTests.cpp  ConfigTests.cpp
texttests/: ScriptRunner.hpp
